add new entity ClientOrganizationUserRole and update name for clientUserRole