@@ -1,16 +1,15 @@
 package me.sonam.role;
 
-import arrow.typeclasses.Hash;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import me.sonam.role.handler.service.carrier.ClientOrganizationUserWithRole;
+import me.sonam.role.handler.service.carrier.User;
 import me.sonam.role.repo.RoleOrganizationRepository;
 import me.sonam.role.repo.RoleRepository;
-import me.sonam.role.repo.RoleClientUserRepository;
+import me.sonam.role.repo.ClientUserRoleRepository;
 import me.sonam.role.repo.RoleUserRepository;
-import me.sonam.role.repo.entity.RoleClientUser;
+import me.sonam.role.repo.entity.ClientOrganizationUserRole;
+import me.sonam.role.repo.entity.Role;
+import me.sonam.role.repo.entity.ClientUserRole;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
@@ -23,8 +22,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.oauth2.jwt.Jwt;
@@ -36,6 +33,7 @@ import reactor.test.StepVerifier;
 
 import java.util.*;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.fail;
@@ -57,14 +55,14 @@ public class RoleServiceTest {
     @Autowired
     private RoleRepository roleRepository;
     @Autowired
-    private RoleClientUserRepository roleClientUserRepository;
+    private ClientUserRoleRepository clientUserRoleRepository;
     @Autowired
     private RoleOrganizationRepository roleOrganizationRepository;
 
     @Autowired
     private RoleUserRepository roleUserRepository;
 
-    private UUID createRoleByOrganizationId(UUID creatorId, UUID clientId, boolean shouldExistBefore, UUID organizationId, String roleName, HttpStatus httpStatus) {
+    private Role createRoleByOrganizationId(UUID creatorId, UUID clientId, boolean shouldExistBefore, UUID organizationId, String roleName, HttpStatus httpStatus) {
         LOG.info("create role {}", roleName);
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
@@ -73,8 +71,9 @@ public class RoleServiceTest {
         //UUID clientId = UUID.randomUUID();
        // UUID userId = UUID.randomUUID();
 
-        List<Map> list = getRolesOwnedByOrganization(organizationId);
-        List<String> roleNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
+        Page<Role> roleRestPage = getRolesOwnedByOrganization(organizationId);
+
+        List<String> roleNames = roleRestPage.getContent().stream().map(role ->role.getName()).collect(toList());
 
         LOG.info("should {} contain role '{}' role at first", shouldExistBefore, roleName);
         assertThat(roleNames.contains(roleName)).isEqualTo(shouldExistBefore);
@@ -84,15 +83,15 @@ public class RoleServiceTest {
                 "clientId", clientId.toString(),
                 "userId", creatorId.toString());
 
-        EntityExchangeResult<Map> entityExchangeResult = webTestClient.post().uri("/roles")
-                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isEqualTo(httpStatus).expectBody(Map.class)
+        EntityExchangeResult<Role> entityExchangeResult = webTestClient.post().uri("/roles")
+                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isEqualTo(httpStatus).expectBody(Role.class)
                 .returnResult();
-        LOG.info("created roleName: {} with id: {}", roleName, entityExchangeResult.getResponseBody().get("id"));
+        LOG.info("created roleName: {} with id: {}", roleName, entityExchangeResult.getResponseBody().getId());
 
 
-        list  = getRolesOwnedByOrganization(organizationId);
+        roleRestPage = getRolesOwnedByOrganization(organizationId);
 
-        roleNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
+        roleNames = roleRestPage.getContent().stream().map(role -> role.getName()).collect(toList());
 
         LOG.info("now we should have a role '{}' from getPage call", roleName);
         assertThat(roleNames.contains(roleName)).isTrue();
@@ -101,12 +100,14 @@ public class RoleServiceTest {
             assertRoles(Map.of(), jwt, clientId);
         }
 
-        if (entityExchangeResult.getResponseBody().get("id") != null) {
-            return UUID.fromString(entityExchangeResult.getResponseBody().get("id").toString());
+        if (entityExchangeResult.getResponseBody().getId() != null) {
+            //return UUID.fromString(entityExchangeResult.getResponseBody().getId().toString());
+            return entityExchangeResult.getResponseBody();
         }
         else {
             LOG.error("returing a random uuid when null");
-            return UUID.randomUUID();
+            //return UUID.randomUUID();
+            return null;
         }
 
     }
@@ -120,14 +121,14 @@ public class RoleServiceTest {
      * @param httpStatus
      * @return
      */
-    private UUID createRoleByUser(UUID creatorId, UUID clientId, boolean shouldExistBefore, String roleName, HttpStatus httpStatus) {
+    private Role createRoleByUser(UUID creatorId, UUID clientId, boolean shouldExistBefore, String roleName, HttpStatus httpStatus) {
         LOG.info("create role {}", roleName);
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
 
-        List<Map> list = getRolesOwnedByUser(creatorId);
-        List<String> roleNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
+        List<Role> list = getRolesOwnedByUser(creatorId);
+        List<String> roleNames = list.stream().map(role -> role.getName()).collect(toList());
 
         LOG.info("should {} contain role '{}' role at first", shouldExistBefore, roleName);
         assertThat(roleNames.contains(roleName)).isEqualTo(shouldExistBefore);
@@ -137,14 +138,14 @@ public class RoleServiceTest {
                 "clientId", clientId.toString(),
                 "userId", creatorId.toString());
 
-        EntityExchangeResult<Map> entityExchangeResult = webTestClient.post().uri("/roles")
-                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isEqualTo(httpStatus).expectBody(Map.class)
+        EntityExchangeResult<Role> entityExchangeResult = webTestClient.post().uri("/roles")
+                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isEqualTo(httpStatus).expectBody(Role.class)
                 .returnResult();
-        LOG.info("created roleName: {} with id: {}", roleName, entityExchangeResult.getResponseBody().get("id"));
+        LOG.info("created roleName: {} with id: {}", roleName, entityExchangeResult.getResponseBody().getId());
 
         list  = getRolesOwnedByUser(creatorId);
 
-        roleNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
+        roleNames = list.stream().map(role -> role.getName()).collect(toList());
 
         LOG.info("now we should have a role '{}' from getPage call", roleName);
         assertThat(roleNames.contains(roleName)).isTrue();
@@ -153,14 +154,15 @@ public class RoleServiceTest {
             assertRoles(Map.of(), jwt, clientId);
         }
 
-        if (entityExchangeResult.getResponseBody().get("id") != null) {
+        return entityExchangeResult.getResponseBody();
+       /* if (entityExchangeResult.getResponseBody().get("id") != null) {
             return UUID.fromString(entityExchangeResult.getResponseBody().get("id").toString());
         }
         else {
             LOG.error("returing a random uuid when null");
             return UUID.randomUUID();
         }
-
+*/
     }
     @Test
     public void createRoleOwnedByOrganization() {
@@ -170,10 +172,10 @@ public class RoleServiceTest {
         UUID creatorId = UUID.randomUUID();
         UUID clientId = UUID.randomUUID();
 
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
+        Role role = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
 
         LOG.info("now create the same role in organizationId");
-        UUID userRoleId2 = createRoleByOrganizationId(creatorId, clientId, true, organizationId, "user", HttpStatus.BAD_REQUEST);
+        Role role2 = createRoleByOrganizationId(creatorId, clientId, true, organizationId, "user", HttpStatus.BAD_REQUEST);
 
     }
 
@@ -184,20 +186,20 @@ public class RoleServiceTest {
         UUID creatorId = UUID.randomUUID();
         UUID clientId = UUID.randomUUID();
 
-        UUID userRoleId = createRoleByUser(creatorId, clientId, false, "user", HttpStatus.CREATED);
+        Role userRoleId = createRoleByUser(creatorId, clientId, false, "user", HttpStatus.CREATED);
 
         LOG.info("now create the same role in organizationId");
-        UUID userRoleId2 = createRoleByUser(creatorId, clientId, true,"user", HttpStatus.BAD_REQUEST);
+        Role userRoleId2 = createRoleByUser(creatorId, clientId, true,"user", HttpStatus.BAD_REQUEST);
 
     }
 
     @AfterEach
     public void deleteAllRoles() {
         roleRepository.deleteAll().subscribe();
-        roleClientUserRepository.deleteAll().subscribe();
+        clientUserRoleRepository.deleteAll().subscribe();
     }
     @Test
-    public void update() {
+    public void updateRole() {
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
@@ -205,26 +207,20 @@ public class RoleServiceTest {
         UUID organizationId = UUID.randomUUID();
         UUID creatorId = UUID.randomUUID();
         UUID clientId = UUID.randomUUID();
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
+        Role role = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
 
 
         LOG.debug("build a map with admin name for role update");
-        var mapBody = Map.of("id", userRoleId.toString(), "organizationId", organizationId.toString(), "name", "admin");
+        var mapBody = Map.of("id", role.getId(), "userId", creatorId, "name", "admin");
 
-        EntityExchangeResult<Map> entityExchangeResult = webTestClient.put().uri("/roles")
-                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isOk().expectBody(Map.class)
+        EntityExchangeResult<Role> entityExchangeResult = webTestClient.put().uri("/roles")
+                .headers(addJwt(jwt)).bodyValue(mapBody).exchange().expectStatus().isOk().expectBody(Role.class)
                 .returnResult();
-        LOG.info("update roleName: {}", entityExchangeResult.getResponseBody().get("message"));
+        LOG.info("update roleName: {}", entityExchangeResult.getResponseBody().getName());
 
-        List<Map> list = getRolesOwnedByOrganization(organizationId);
-        List<String> listOfNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
-
-
-        LOG.info("should not contain user role at first");
-        assertThat(listOfNames.contains("admin")).isTrue();
-
-        LOG.debug("we should not have user roleName after updating that value");
-        assertThat(listOfNames.contains("user")).isFalse();
+        Page<Role> rolePage = getRolesOwnedByOrganization(organizationId);
+        assertThat(rolePage.getTotalElements()).isEqualTo(1);
+        assertThat(rolePage.getContent().get(0)).isNotEqualTo(role);
     }
 
     @Test
@@ -238,29 +234,31 @@ public class RoleServiceTest {
         UUID clientId = UUID.randomUUID();
 
         LOG.info("create role for organization as owner");
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
+        Role role = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
 
-        StepVerifier.create(roleOrganizationRepository.existsByRoleIdAndOrganizationId(userRoleId, organizationId))
+        StepVerifier.create(roleOrganizationRepository.existsByRoleIdAndOrganizationId(role.getId(), organizationId))
                 .expectNext(true).verifyComplete();
 
-        EntityExchangeResult<Map> entityExchangeResult = webTestClient.delete().uri("/roles/"+userRoleId.toString())
+        EntityExchangeResult<Map> entityExchangeResult = webTestClient.delete().uri("/roles/"+role.getId())
                 .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(Map.class)
                 .returnResult();
         LOG.info("update roleName: {}", entityExchangeResult.getResponseBody().get("message"));
 
-        List<Map> list = getRolesOwnedByOrganization(organizationId);
-        List<String> listOfNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
+        Page<Role> rolePage = getRolesOwnedByOrganization(organizationId);
+        assertThat(rolePage.getTotalElements()).isEqualTo(0);
+
+        /*List<String> listOfNames = list.stream().map(map -> map.get("name").toString()).collect(toList());
 
         assertThat(listOfNames.contains("user")).isFalse();
-
-        StepVerifier.create(roleUserRepository.existsByRoleIdAndUserId(userRoleId, creatorId))
+*/
+        StepVerifier.create(roleUserRepository.existsByRoleIdAndUserId(role.getId(), creatorId))
                 .expectNext(false).verifyComplete();
-        StepVerifier.create(roleOrganizationRepository.existsByRoleIdAndOrganizationId(userRoleId, organizationId))
+        StepVerifier.create(roleOrganizationRepository.existsByRoleIdAndOrganizationId(role.getId(), organizationId))
                 .expectNext(false).verifyComplete();
     }
 
     @Test
-    public void getById() {
+    public void getRoleById() {
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
@@ -270,14 +268,14 @@ public class RoleServiceTest {
         UUID clientId = UUID.randomUUID();
 
         LOG.info("create user role");
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
+        Role role = createRoleByOrganizationId(creatorId, clientId, false, organizationId, "user", HttpStatus.CREATED);
 
-        EntityExchangeResult<Map> entityExchangeResult = webTestClient.get().uri("/roles/"+userRoleId)
+        EntityExchangeResult<Map> entityExchangeResult = webTestClient.get().uri("/roles/"+role.getId())
                 .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(Map.class)
                 .returnResult();
         LOG.info("retrieved role by id: {}", entityExchangeResult.getResponseBody());
 
-        assertThat(entityExchangeResult.getResponseBody().get("id")).isEqualTo(userRoleId.toString());
+        assertThat(entityExchangeResult.getResponseBody().get("id")).isEqualTo(role.getId().toString());
         assertThat(entityExchangeResult.getResponseBody().get("organizationId")).isNull();
         assertThat(entityExchangeResult.getResponseBody().get("name")).isEqualTo("user");
     }
@@ -296,13 +294,16 @@ public class RoleServiceTest {
         UUID clientId = UUID.randomUUID();
 
         LOG.info("create user role");
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
-        UUID adminRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "admin", HttpStatus.CREATED);
-        UUID emplyeeRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "employee", HttpStatus.CREATED);
-        UUID managerRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "manager", HttpStatus.CREATED);
+        Role userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
+        Role adminRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "admin", HttpStatus.CREATED);
+        Role emplyeeRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "employee", HttpStatus.CREATED);
+        Role managerRoleId = createRoleByOrganizationId(creatorId, clientId, false,companyId1, "manager", HttpStatus.CREATED);
+        LOG.info("userRoleId: {}", userRoleId);
 
-        List<Map> roleList = getRolesOwnedByOrganization(companyId1);
-        List<String> listOfNames = roleList.stream().map(map -> map.get("name").toString()).collect(toList());
+        Page<Role> roleRestPage = getRolesOwnedByOrganization(companyId1);
+        assertThat(roleRestPage.getContent().containsAll(List.of(userRoleId, adminRoleId, emplyeeRoleId, managerRoleId))).isTrue();
+
+        List<String> listOfNames = roleRestPage.getContent().stream().map(Role::getName).toList();
 
         assertThat(listOfNames.contains("user")).isTrue();
         assertThat(listOfNames.contains("admin")).isTrue();
@@ -310,237 +311,324 @@ public class RoleServiceTest {
         assertThat(listOfNames.contains("manager")).isTrue();
         assertThat(listOfNames.contains("person")).isFalse();
 
-        UUID companyId2managerRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId2, "manager", HttpStatus.CREATED);
-        UUID companyId2userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId2, "user", HttpStatus.CREATED);
 
-        roleList = getRolesOwnedByOrganization(companyId2);
-        listOfNames = roleList.stream().map(map -> map.get("name").toString()).collect(toList());
+        Role companyId2managerRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId2, "manager", HttpStatus.CREATED);
+        Role companyId2userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId2, "user", HttpStatus.CREATED);
+
+        roleRestPage = getRolesOwnedByOrganization(companyId2);
+        assertThat(companyId2managerRoleId).isNotNull();
+        assertThat(companyId2userRoleId).isNotNull();
+        assertThat(roleRestPage.getContent().containsAll(List.of(companyId2managerRoleId, companyId2userRoleId))).isTrue();
+
+
+        listOfNames = roleRestPage.getContent().stream().map(Role::getName).toList();
         assertThat(listOfNames.size()).isEqualTo(2);
 
         assertThat(listOfNames.contains("manager")).isTrue();
         assertThat(listOfNames.contains("user")).isTrue();
 
-        UUID companyId3managerRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId3, "manager", HttpStatus.CREATED);
 
-        roleList = getRolesOwnedByOrganization(companyId3);
-        listOfNames = roleList.stream().map(map -> map.get("name").toString()).collect(toList());
+        Role companyId3managerRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId3, "manager", HttpStatus.CREATED);
+
+        roleRestPage = getRolesOwnedByOrganization(companyId3);
+        assertThat(roleRestPage.getContent().contains(companyId3managerRoleId)).isTrue();
+        assertThat(roleRestPage.getTotalElements()).isEqualTo(1);
+
+        listOfNames = roleRestPage.getContent().stream().map(Role::getName).toList();
         assertThat(listOfNames.size()).isEqualTo(1);
 
         assertThat(listOfNames.contains("manager")).isTrue();
     }
-        public List<Map> getRolesOwnedByOrganization(UUID organizationId) {
+
+    public Page<Role> getRolesOwnedByOrganization(UUID organizationId) {
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
 
             LOG.info("get roles owned by organization");
-        EntityExchangeResult<RestPage> entityExchangeResult = webTestClient.get().uri("/roles/organization/"+organizationId)
-                .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(RestPage.class)
+        EntityExchangeResult<RestPage<Role>> entityExchangeResult = webTestClient.get().uri("/roles/organizations/"+organizationId)
+                .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<RestPage<Role>>() {
+                })
                 .returnResult();
 
-        LOG.info("roles found: {}", entityExchangeResult.getResponseBody().getContent());
-        List<Map> list = entityExchangeResult.getResponseBody().getContent();
+        LOG.info("roles found: {}", entityExchangeResult.getResponseBody());
 
-        return list;
-
+        return entityExchangeResult.getResponseBody();
     }
 
-    public List<Map> getRolesOwnedByUser(UUID userId) {
+    public List<Role> getRolesOwnedByUser(UUID userId) {
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
 
         LOG.info("get roles owned by user");
-        EntityExchangeResult<RestPage> entityExchangeResult = webTestClient.get().uri("/roles/user/"+userId)
-                .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(RestPage.class)
+        EntityExchangeResult<RestPage<Role>> entityExchangeResult = webTestClient.get().uri("/roles/user-id/"+userId)
+                .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<RestPage<Role>>(){})
                 .returnResult();
 
-        LOG.info("roles found: {}", entityExchangeResult.getResponseBody().getContent());
-        List<Map> list = entityExchangeResult.getResponseBody().getContent();
+        RestPage<Role> roleRestPage = entityExchangeResult.getResponseBody();
+        LOG.info("roles found: {}", roleRestPage.getContent());
+        List<Role> list = roleRestPage.getContent();
 
         return list;
 
     }
 
     @Test
-    public void roleClientUserAssociation() {
+    public void clientUserRoleAssociation() {
         UUID clientId = UUID.randomUUID();
         UUID userId1 = UUID.randomUUID();
         UUID userId2 = UUID.randomUUID();
         UUID userId3 = UUID.randomUUID();
 
         UUID creatorId = UUID.randomUUID();
-        UUID companyId1 = UUID.randomUUID();
-        UUID companyId2 = UUID.randomUUID();
-        UUID companyId3 = UUID.randomUUID();
 
         LOG.info("create user role");
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
-        UUID adminRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "admin", HttpStatus.CREATED);
+        Role userRoleId =  createRoleByUser(creatorId, clientId, false, "user", HttpStatus.CREATED);
+        //createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
+        Role adminRoleId = createRoleByUser(creatorId, clientId, false, "admin", HttpStatus.CREATED);
+        // createRoleByOrganizationId(creatorId, clientId, false, companyId1, "admin", HttpStatus.CREATED);
 
         List<Map> mapList = Arrays.asList(Map.of("clientId", clientId.toString(),
                         "userId", userId1.toString(),
-                        "roleId", userRoleId.toString()),
+                        "roleId", userRoleId.getId()),
                 Map.of("clientId", clientId.toString(),
                         "userId", userId2.toString(),
-                        "roleId", adminRoleId.toString()),
+                        "roleId", adminRoleId.getId()),
                 Map.of("clientId", clientId.toString(),
                         "userId", userId3.toString(),
-                        "roleId", userRoleId.toString()));
+                        "roleId", userRoleId.getId()));
 
-        Map<String, String> map1 = Map.of("clientId", clientId.toString(),
+        Map<String, Object> map1 = Map.of("clientId", clientId.toString(),
                 "userId", userId1.toString(),
-                "roleId", userRoleId.toString());
+                "roleId", userRoleId.getId());
 
-        Map<String, String> map2 = Map.of("clientId", clientId.toString(),
+        Map<String, Object> map2 = Map.of("clientId", clientId.toString(),
                         "userId", userId2.toString(),
-                        "roleId", adminRoleId.toString());
+                        "roleId", adminRoleId.getId());
 
-        Map<String, String> map3 = Map.of("clientId", clientId.toString(),
+        Map<String, Object> map3 = Map.of("clientId", clientId.toString(),
                         "userId", userId3.toString(),
-                        "roleId", userRoleId.toString());
+                        "roleId", userRoleId.getId());
 
         LOG.info("add users to role");
         final String authenticationId = "sonam";
         Jwt jwt = jwt(authenticationId);
         when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
 
-        List<RoleClientUser> roleClientUsers = new ArrayList<>();
         ObjectMapper mapper = new ObjectMapper();
 
-        RoleClientUser roleClientUser1 = postAddRoleClientUser(jwt, map1, mapper);
-        RoleClientUser roleClientUser2 = postAddRoleClientUser(jwt, map2, mapper);
-        RoleClientUser roleClientUser3 = postAddRoleClientUser(jwt, map3, mapper);
+        ClientUserRole clientUserRole1 = addClientUserRole(jwt, map1, mapper);
+        ClientUserRole clientUserRole2 = addClientUserRole(jwt, map2, mapper);
+        ClientUserRole clientUserRole3 = addClientUserRole(jwt, map3, mapper);
 
-        RoleClientUser roleClientUserUpdate = new RoleClientUser(roleClientUser1.getId(), roleClientUser1.getClientId(),
-                roleClientUser1.getUserId(), adminRoleId);
+        ClientUserRole clientUserRoleUpdate = new ClientUserRole(clientUserRole1.getId(), clientUserRole1.getClientId(),
+                clientUserRole1.getUserId(), adminRoleId.getId());
 
-        updateRoleClientUser(jwt, roleClientUserUpdate, mapper);
-        roleClientUserUpdate = new RoleClientUser(roleClientUser2.getId(), roleClientUser2.getClientId(),
-                roleClientUser2.getUserId(), userRoleId);
+        updateClientUserRole(jwt, clientUserRoleUpdate, mapper);
+        clientUserRoleUpdate = new ClientUserRole(clientUserRole2.getId(), clientUserRole2.getClientId(),
+                clientUserRole2.getUserId(), userRoleId.getId());
 
-        updateRoleClientUser(jwt, roleClientUserUpdate, mapper);
+        updateClientUserRole(jwt, clientUserRoleUpdate, mapper);
 
-        roleClientUserUpdate = new RoleClientUser(roleClientUser3.getId(), roleClientUser3.getClientId(),
-                roleClientUser3.getUserId(), adminRoleId);
+        clientUserRoleUpdate = new ClientUserRole(clientUserRole3.getId(), clientUserRole3.getClientId(),
+                clientUserRole3.getUserId(), adminRoleId.getId());
 
-        updateRoleClientUser(jwt, roleClientUserUpdate, mapper);
+        updateClientUserRole(jwt, clientUserRoleUpdate, mapper);
 
-        Map<UUID, RoleClientUser> map = getUserRoleClient(jwt, clientId,  mapper);
-        assertThat(map.get(roleClientUser1.getId())).isNotNull();
-        assertThat(map.get(roleClientUser1.getId()).getRoleId()).isNotNull();
-        assertThat(map.get(roleClientUser1.getId()).getRoleId()).isEqualTo(adminRoleId);
+        Map<UUID, ClientUserRole> map = getClientUserRole(jwt, clientId,  mapper);
+        assertThat(map.get(clientUserRole1.getId())).isNotNull();
+        assertThat(map.get(clientUserRole1.getId()).getRoleId()).isNotNull();
+        assertThat(map.get(clientUserRole1.getId()).getRoleId()).isEqualTo(adminRoleId.getId());
 
-        assertThat(map.get(roleClientUser2.getId())).isNotNull();
-        assertThat(map.get(roleClientUser2.getId()).getRoleId()).isNotNull();
-        assertThat(map.get(roleClientUser2.getId()).getRoleId()).isEqualTo(userRoleId);
+        assertThat(map.get(clientUserRole2.getId())).isNotNull();
+        assertThat(map.get(clientUserRole2.getId()).getRoleId()).isNotNull();
+        assertThat(map.get(clientUserRole2.getId()).getRoleId()).isEqualTo(userRoleId.getId());
 
-        assertThat(map.get(roleClientUser3.getId())).isNotNull();
-        assertThat(map.get(roleClientUser3.getId()).getRoleId()).isEqualTo(adminRoleId);
+        assertThat(map.get(clientUserRole3.getId())).isNotNull();
+        assertThat(map.get(clientUserRole3.getId()).getRoleId()).isEqualTo(adminRoleId.getId());
 
 
-        deleteRoleClientUser(jwt, adminRoleId, userId3);
-        map = getUserRoleClient(jwt, clientId,  mapper);
+        deleteClientUserRole(jwt, adminRoleId.getId(), userId3);
+        map = getClientUserRole(jwt, clientId,  mapper);
         assertThat(map.size()).isEqualTo(2);
-        assertThat(map.get(roleClientUser3.getId())).isNull();
-        assertThat(map.get(roleClientUser1.getId())).isNotNull();
-        assertThat(map.get(roleClientUser2.getId())).isNotNull();
+        assertThat(map.get(clientUserRole3.getId())).isNull();
+        assertThat(map.get(clientUserRole1.getId())).isNotNull();
+        assertThat(map.get(clientUserRole2.getId())).isNotNull();
 
-        deleteRoleClientUser(jwt, adminRoleId, userId1);
-        map = getUserRoleClient(jwt, clientId,  mapper);
+        deleteClientUserRole(jwt, adminRoleId.getId(), userId1);
+        map = getClientUserRole(jwt, clientId,  mapper);
         assertThat(map.size()).isEqualTo(1);
-        assertThat(map.get(roleClientUser3.getId())).isNull();
-        assertThat(map.get(roleClientUser1.getId())).isNull();
-        assertThat(map.get(roleClientUser2.getId())).isNotNull();
+        assertThat(map.get(clientUserRole3.getId())).isNull();
+        assertThat(map.get(clientUserRole1.getId())).isNull();
+        assertThat(map.get(clientUserRole2.getId())).isNotNull();
 
         LOG.info("deleteRoleClientUser with not associated userId 2 and admin roleId");
-        deleteRoleClientUser(jwt, adminRoleId, userId2);
-        map = getUserRoleClient(jwt, clientId,  mapper);
+        deleteClientUserRole(jwt, adminRoleId.getId(), userId2);
+        map = getClientUserRole(jwt, clientId,  mapper);
         assertThat(map.size()).isEqualTo(1);
-        assertThat(map.get(roleClientUser3.getId())).isNull();
-        assertThat(map.get(roleClientUser1.getId())).isNull();
-        assertThat(map.get(roleClientUser2.getId())).isNotNull();
+        assertThat(map.get(clientUserRole3.getId())).isNull();
+        assertThat(map.get(clientUserRole1.getId())).isNull();
+        assertThat(map.get(clientUserRole2.getId())).isNotNull();
 
-        deleteRoleClientUser(jwt, userRoleId, userId2);
-        map = getUserRoleClient(jwt, clientId,  mapper);
+        deleteClientUserRole(jwt, userRoleId.getId(), userId2);
+        map = getClientUserRole(jwt, clientId,  mapper);
         assertThat(map.size()).isEqualTo(0);
-        assertThat(map.get(roleClientUser3.getId())).isNull();
-        assertThat(map.get(roleClientUser1.getId())).isNull();
-        assertThat(map.get(roleClientUser2.getId())).isNull();
+        assertThat(map.get(clientUserRole3.getId())).isNull();
+        assertThat(map.get(clientUserRole1.getId())).isNull();
+        assertThat(map.get(clientUserRole2.getId())).isNull();
     }
 
-    //delete RoleClientUser by roleId and userId
-    private void deleteRoleClientUser(final Jwt jwt, UUID adminRoleId, UUID userId) {
+    /**
+     * this method will test clientOrganizationUsers add, getClientUsersRoles by orgId and userIds and delete by id
+     */
+    @Test
+    public void addClientOrganizationUsers() {
+        final String authenticationId = "sonam";
+        Jwt jwt = jwt(authenticationId);
+        when(this.jwtDecoder.decode(anyString())).thenReturn(Mono.just(jwt));
+
+        UUID clientId = UUID.randomUUID();
+        UUID organizationId = UUID.randomUUID();
+        UUID userId = UUID.randomUUID();
+
+
+        Role userRole = createRoleByOrganizationId(userId, clientId, false, organizationId, "user", HttpStatus.CREATED);
+        assertThat(userRole).isNotNull();
+        assertThat(userRole.getId()).isNotNull();
+
+        User user = new User(userId, userRole);
+        ClientOrganizationUserWithRole clientOrganizationUserWithRole = new ClientOrganizationUserWithRole(null, clientId, organizationId, user);
+
+        ClientOrganizationUserRole clientOrganizationUserRole = addClientOrganizationUserWithRole(jwt, clientOrganizationUserWithRole);
+
+        assertThat(clientOrganizationUserRole.getOrganizationId()).isEqualTo(organizationId);
+        assertThat(clientOrganizationUserRole.getClientId()).isEqualTo(clientId);
+        assertThat(clientOrganizationUserRole.getUserId()).isEqualTo(user.getId());
+        assertThat(clientOrganizationUserRole.getRoleId()).isEqualTo(userRole.getId());
+
+        List<ClientOrganizationUserWithRole> clientOrganizationUserWithRoles = getClientOrganizationUserWithRoles(clientId, jwt, organizationId, List.of(userId));
+        assertThat(clientOrganizationUserWithRoles.size()).isEqualTo(1);
+        assertThat(clientOrganizationUserWithRoles.get(0).getUser().getId()).isEqualTo(userId);
+        assertThat(clientOrganizationUserWithRoles.get(0).getUser().getRole().getUserId()).isEqualTo(userId);
+        assertThat(clientOrganizationUserWithRoles.get(0).getUser().getRole().getId()).isEqualTo(userRole.getId());
+        assertThat(clientOrganizationUserWithRoles.get(0).getUser().getRole().getName()).isEqualTo(userRole.getName());
+        assertThat(clientOrganizationUserWithRoles.get(0).getClientId()).isEqualTo(clientId);
+        assertThat(clientOrganizationUserWithRoles.get(0).getOrganizationId()).isEqualTo(organizationId);
+
+        deleteClientOrganizationUser(clientOrganizationUserWithRoles.get(0).getId(), jwt);
+        clientOrganizationUserWithRoles = getClientOrganizationUserWithRoles(clientId, jwt, organizationId, List.of(userId));
+        assertThat(clientOrganizationUserWithRoles.size()).isEqualTo(0);
+    }
+
+    private void deleteClientOrganizationUser(UUID id, Jwt jwt) {
+        LOG.info("delete clientOrganizationUser by id");
+
+        EntityExchangeResult<String> entityExchangeResult = webTestClient.delete().uri("/roles/client-organization-users/"+id).headers(addJwt(jwt))
+                .exchange().expectStatus().isOk().expectBody(String.class).returnResult();
+
+        assertThat(entityExchangeResult.getResponseBody()).isEqualTo("roleClientOrganizationUser deleted");
+    }
+
+    private List<ClientOrganizationUserWithRole> getClientOrganizationUserWithRoles(UUID clientId, Jwt jwt, UUID organizationId, List<UUID> list) {
+        LOG.info("call endpoint o get client organization user with roles");
+
+        String csvUuid = list.stream().map(uuid -> uuid + ",").collect(Collectors.joining());
+        LOG.info("csvUuid: {}", csvUuid);
+        if (csvUuid.endsWith(",")) {
+            int index = csvUuid.lastIndexOf(",");
+            csvUuid = csvUuid.substring(0, index);
+        }
+        LOG.info("after removal of last , {}", csvUuid);
+
+        return webTestClient.get().uri("/roles/client-organization-users/client-id/"+clientId+"/organization-id/"+organizationId+"/user-id/"+ csvUuid)
+                .headers(addJwt(jwt)).exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<List<ClientOrganizationUserWithRole>>() {})
+                .returnResult().getResponseBody();
+    }
+
+    private ClientOrganizationUserRole addClientOrganizationUserWithRole(Jwt jwt, ClientOrganizationUserWithRole clientOrganizationUserWithRole) {
+        LOG.info("call endpoint to add clientOrganizationUserWithRole");
+
+        EntityExchangeResult<ClientOrganizationUserRole> entityExchangeResult = webTestClient.post()
+                .uri("/roles/client-organization-users")
+                .headers(addJwt(jwt)).bodyValue(clientOrganizationUserWithRole)
+                .exchange().expectStatus().isOk().expectBody(ClientOrganizationUserRole.class).returnResult();
+
+        assertThat(entityExchangeResult.getResponseBody()).isNotNull();
+        return entityExchangeResult.getResponseBody();
+    }
+    //delete ClientUserRole by roleId and userId
+    private void deleteClientUserRole(final Jwt jwt, UUID adminRoleId, UUID userId) {
         webTestClient.delete()
-                .uri("/roles/"+adminRoleId+"/users/"+userId).headers(addJwt(jwt))
+                .uri("/roles/client-users/role-id/"+adminRoleId+"/user-id/"+userId).headers(addJwt(jwt))
                 .exchange().expectStatus().isOk().expectBody(Map.class).returnResult();
     }
 
-    private RoleClientUser postAddRoleClientUser(final Jwt jwt, Map<String, String> map, ObjectMapper mapper) {
-        EntityExchangeResult<Map<String, Object>> entityExchangeResult = webTestClient.post().uri("/roles/user")
+    private ClientUserRole addClientUserRole(final Jwt jwt, Map<String, Object> map, ObjectMapper mapper) {
+        EntityExchangeResult<Map<String, Object>> entityExchangeResult = webTestClient.post().uri("/roles/client-users")
                 .headers(addJwt(jwt)).bodyValue(map)
                 .exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<Map<String, Object>>(){}).returnResult();
         LOG.info("response from adding user client roles: {}", entityExchangeResult.getResponseBody());
         assertThat(entityExchangeResult.getResponseBody().get("message")).isEqualTo("created new role client user row");
 
-        RoleClientUser roleClientUser = mapper.convertValue(entityExchangeResult.getResponseBody().get("object"), RoleClientUser.class);
+        ClientUserRole clientUserRole = mapper.convertValue(entityExchangeResult.getResponseBody().get("object"), ClientUserRole.class);
 
-        assertThat(roleClientUser.getUserId()).isEqualTo(UUID.fromString(map.get("userId")));
-        assertThat(roleClientUser.getClientId()).isEqualTo(map.get("clientId"));
-        assertThat(roleClientUser.getRoleId()).isEqualTo(UUID.fromString(map.get("roleId")));
-        LOG.info("assert role, clientId and userId matches from the map: {}", roleClientUser);
+        assertThat(clientUserRole.getUserId()).isEqualTo(UUID.fromString(map.get("userId").toString()));
+        assertThat(clientUserRole.getClientId()).isEqualTo(map.get("clientId"));
+        assertThat(clientUserRole.getRoleId()).isEqualTo(UUID.fromString(map.get("roleId").toString()));
+        LOG.info("assert role, clientId and userId matches from the map: {}", clientUserRole);
 
-        return roleClientUser;
+        return clientUserRole;
     }
 
-    private void updateRoleClientUser(final Jwt jwt, RoleClientUser roleClientUser, ObjectMapper mapper) {
+    private void updateClientUserRole(final Jwt jwt, ClientUserRole clientUserRole, ObjectMapper mapper) {
         LOG.info("update role client user");
 
         EntityExchangeResult<Map> entityExchangeResult = webTestClient.put()
-                .uri("/roles/user").headers(addJwt(jwt)).bodyValue(roleClientUser)
+                .uri("/roles/client-users").headers(addJwt(jwt)).bodyValue(clientUserRole)
                 .exchange().expectStatus().isOk().expectBody(Map.class).returnResult();
         LOG.info("result: {}", entityExchangeResult.getResponseBody());
         assertThat(entityExchangeResult.getResponseBody().get("message"))
                     .isEqualTo("updated role client user with id");
     }
 
-    private Map<UUID, RoleClientUser> getUserRoleClient(final Jwt jwt, final UUID clientId, ObjectMapper mapper) {
+    private Map<UUID, ClientUserRole> getClientUserRole(final Jwt jwt, final UUID clientId, ObjectMapper mapper) {
         LOG.info("get role user client by page");
-        EntityExchangeResult<RestPage> pageResult = webTestClient.get().uri("/roles/clientId/" + clientId + "/users")
+        EntityExchangeResult<RestPage<ClientUserRole>> pageResult = webTestClient.get().uri("/roles/client-users/client-id/" + clientId)
                 .headers(addJwt(jwt))
-                .exchange().expectStatus().isOk().expectBody(RestPage.class).returnResult();
+                .exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<RestPage<ClientUserRole>>() {
+                }).returnResult();
 
         LOG.info("pageResult pageable {}", pageResult.getResponseBody().getPageable());
         LOG.info("assert roles size for clientId: {}", pageResult.getResponseBody().getContent().size());
         //Assertions.assertThat(pageResult.getResponseBody().getContent().size()).isEqualTo(userIdRoleMap.size());
 
-        Map<UUID, RoleClientUser> map = new HashMap<>();
-        pageResult.getResponseBody().getContent().forEach(o -> {
-            RoleClientUser roleClientUser = mapper.convertValue(o, RoleClientUser.class);
-            LOG.info("roleClientUser from page: {}", roleClientUser);
-            map.put(roleClientUser.getId(), roleClientUser);
+        Map<UUID, ClientUserRole> map = new HashMap<>();
+        pageResult.getResponseBody().getContent().forEach(clientUserRole -> {
+            LOG.info("roleClientUser from page: {}", clientUserRole);
+            map.put(clientUserRole.getId(), clientUserRole);
         });
 
         return map;
     }
 
-    private void modifyRoles(List<RoleClientUser> roleClientUsers, UUID clientId, UUID userId1, UUID userId2, UUID userId3, UUID adminRoleId, UUID userRoleId) {
+    private void modifyRoles(List<ClientUserRole> clientUserRoles, UUID clientId, UUID userId1, UUID userId2, UUID userId3, UUID adminRoleId, UUID userRoleId) {
         LOG.info("test with modified roles");
 
-        List<RoleClientUser> updateRoleClientUsers = new ArrayList<>();
-        Map<String, String> map = new HashMap<>();//Map.of(userId1.toString(), "admin", userId3.toString(), "user");
+        List<ClientUserRole> updateClientUserRoles = new ArrayList<>();
+        Map<UUID, String> map = new HashMap<>();//Map.of(userId1.toString(), "admin", userId3.toString(), "user");
 
-        for(RoleClientUser roleClientUser: roleClientUsers) {
-            if (roleClientUser.getRoleId().equals(userRoleId)) {
-                updateRoleClientUsers.add(new RoleClientUser(roleClientUser.getId(), roleClientUser.getClientId(), roleClientUser.getUserId(), adminRoleId));
-                LOG.info("update role for roleClientUser from {} to {}", roleClientUser.getRoleId(), adminRoleId);
+        for(ClientUserRole clientUserRole : clientUserRoles) {
+            if (clientUserRole.getRoleId().equals(userRoleId)) {
+                updateClientUserRoles.add(new ClientUserRole(clientUserRole.getId(), clientUserRole.getClientId(), clientUserRole.getUserId(), adminRoleId));
+                LOG.info("update role for roleClientUser from {} to {}", clientUserRole.getRoleId(), adminRoleId);
 
-                map.put(roleClientUser.getUserId().toString(), adminRoleId.toString());
+                map.put(clientUserRole.getUserId(), adminRoleId.toString());
             }
-            else if (roleClientUser.getRoleId().equals(adminRoleId)) {
-                updateRoleClientUsers.add(new RoleClientUser(roleClientUser.getId(), roleClientUser.getClientId(), roleClientUser.getUserId(), userRoleId));
-                LOG.info("update role for roleClientUser from {} to {}", roleClientUser.getRoleId(), userRoleId);
-                map.put(roleClientUser.getUserId().toString(), userRoleId.toString());
+            else if (clientUserRole.getRoleId().equals(adminRoleId)) {
+                updateClientUserRoles.add(new ClientUserRole(clientUserRole.getId(), clientUserRole.getClientId(), clientUserRole.getUserId(), userRoleId));
+                LOG.info("update role for roleClientUser from {} to {}", clientUserRole.getRoleId(), userRoleId);
+                map.put(clientUserRole.getUserId(), userRoleId.toString());
             }
             else {
                 LOG.error("roleId didn't match to userRoleId or amdinRoleId");
@@ -556,9 +644,9 @@ public class RoleServiceTest {
 
 
         LOG.info("update role user");
-        for (RoleClientUser roleClientUser: updateRoleClientUsers) {
+        for (ClientUserRole clientUserRole : updateClientUserRoles) {
             EntityExchangeResult<Map> entityExchangeResult = webTestClient.put()
-                    .uri("/roles/user").headers(addJwt(jwt)).bodyValue(roleClientUser)
+                    .uri("/roles/user").headers(addJwt(jwt)).bodyValue(clientUserRole)
                     .exchange().expectStatus().isOk().expectBody(Map.class).returnResult();
             LOG.info("result: {}", entityExchangeResult.getResponseBody());
             assertThat(entityExchangeResult.getResponseBody().get("message"))
@@ -576,42 +664,24 @@ public class RoleServiceTest {
         assertRoles(map, jwt, clientId);
     }
 
-    private void assertRoles(Map<String, String> userIdRoleMap, Jwt jwt, UUID clientId) {
+    private void assertRoles(Map<UUID, String> userIdRoleMap, Jwt jwt, UUID clientId) {
 
         LOG.info("get applications by id and all users in it, which should give 4 applicationUsers");
-        EntityExchangeResult<RestPage> pageResult = webTestClient.get().uri("/roles/clientId/" + clientId + "/users")
+        EntityExchangeResult<RestPage<ClientUserRole>> pageResult = webTestClient.get().uri("/roles/client-users/client-id/" + clientId)
                 .headers(addJwt(jwt))
-                .exchange().expectStatus().isOk().expectBody(RestPage.class).returnResult();
+                .exchange().expectStatus().isOk().expectBody(new ParameterizedTypeReference<RestPage<ClientUserRole>>() {
+                }).returnResult();
 
         LOG.info("pageResult pageable {}", pageResult.getResponseBody().getPageable());
         LOG.info("assert roles size for clientId: {}", pageResult.getResponseBody().getContent().size());
         Assertions.assertThat(pageResult.getResponseBody().getContent().size()).isEqualTo(userIdRoleMap.size());
 
+        pageResult.getResponseBody().forEach(clientUserRole -> {
+            assertThat(userIdRoleMap.get(clientUserRole.getId())).isNotNull();
+            assertThat(userIdRoleMap.get(clientUserRole.getId())).isNotNull();
+            assertThat(userIdRoleMap.get(clientUserRole.getId())).isEqualTo(clientUserRole.getRoleName());
+        });
 
-        Set<String> keySet = userIdRoleMap.keySet();
-        if (!keySet.isEmpty()) {
-            LOG.info("map has keys");
-            pageResult.getResponseBody().getContent().forEach(o -> {
-                LinkedHashMap<String, String> linkedHashMap1 = (LinkedHashMap) o;
-
-                LOG.info("linkedHashMap1: {}", linkedHashMap1);
-
-                String userId = linkedHashMap1.get("userId").toString();
-
-                if (keySet.contains(userId)) {
-                    String roleName = linkedHashMap1.get("roleName");
-
-                    Assertions.assertThat(roleName).isEqualTo(userIdRoleMap.get(userId));
-                    LOG.info("matched page response userId: '{}' and role: '{}' with expected from " +
-                            "map.role: '{}'", userId, roleName, userIdRoleMap.get(userId));
-                } else {
-                    fail("retrieved userId from page does not match");
-                }
-            });
-        }
-         else {
-             LOG.info("map is empty");
-        }
     }
 
     @Test
@@ -627,25 +697,22 @@ public class RoleServiceTest {
         UUID companyId3 = UUID.randomUUID();
 
         LOG.info("create user role");
-        UUID userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
-        UUID adminRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "admin", HttpStatus.CREATED);
+        Role userRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "user", HttpStatus.CREATED);
+        Role adminRoleId = createRoleByOrganizationId(creatorId, clientId, false, companyId1, "admin", HttpStatus.CREATED);
 
-        List<Map> mapList = Arrays.asList(Map.of("clientId", clientId.toString(),
-                        "userId", userId1.toString(),
-                        "roleId", userRoleId.toString(),
-                        "action", "add"),
+        List<Map<String, Object>> mapList = Arrays.asList(
                 Map.of("clientId", clientId.toString(),
                         "userId", userId1.toString(),
-                        "roleId", adminRoleId.toString(),
-                        "action", "add"),
+                        "roleId", userRoleId.getId()),
+                Map.of("clientId", clientId.toString(),
+                        "userId", userId1.toString(),
+                        "roleId", adminRoleId.getId()),
                 Map.of("clientId", clientId.toString(),
                         "userId", userId2.toString(),
-                        "roleId", adminRoleId.toString(),
-                        "action", "add"),
+                        "roleId", adminRoleId.getId()),
                 Map.of("clientId", clientId.toString(),
                         "userId", userId3.toString(),
-                        "roleId", userRoleId.toString(),
-                        "action", "add"));
+                        "roleId", userRoleId.getId()));
 
         LOG.info("add users to role");
         final String authenticationId = "sonam";
@@ -654,7 +721,7 @@ public class RoleServiceTest {
 
 
         mapList.forEach(map -> {
-            EntityExchangeResult<String> entityExchangeResult = webTestClient.post().uri("/roles/user").headers(addJwt(jwt)).bodyValue(map)
+            EntityExchangeResult<String> entityExchangeResult = webTestClient.post().uri("/roles/client-users").headers(addJwt(jwt)).bodyValue(map)
                     .exchange().expectStatus().isOk().expectBody(String.class).returnResult();
         });
         LOG.info("made role user associations");
@@ -662,7 +729,7 @@ public class RoleServiceTest {
         LOG.info("get role by clientId and userId");
 
         EntityExchangeResult<List> roleByClientIdAndUserIdResult = webTestClient.get()
-                .uri("/roles/clientId/" + clientId + "/users/" + userId1).headers(addJwt(jwt))
+                .uri("/roles/client-users/client-id/" + clientId + "/user-id/" + userId1).headers(addJwt(jwt))
                 .exchange().expectStatus().isOk().expectBody(List.class).returnResult();
 
         LOG.info("list {}", roleByClientIdAndUserIdResult.getResponseBody());
@@ -693,29 +760,6 @@ public class RoleServiceTest {
 
     private Consumer<HttpHeaders> addJwt(Jwt jwt) {
         return headers -> headers.setBearerAuth(jwt.getTokenValue());
-    }
-
-
-}
-
-@JsonIgnoreProperties(ignoreUnknown = true, value = {"pageable"})
-class RestPage<T> extends PageImpl<T> {
-    private static final Logger LOG = LoggerFactory.getLogger(RestPage.class);
-
-    @JsonCreator(mode = JsonCreator.Mode.PROPERTIES)
-    public RestPage(@JsonProperty("content") List<T> content,
-                    @JsonProperty("number") int page,
-                    @JsonProperty("size") int size,
-                    @JsonProperty("totalElements") long total,
-                    @JsonProperty("numberOfElements") int numberOfElements,
-                    @JsonProperty("pageNumber") int pageNumber
-    ) {
-        super(content, PageRequest.of(page, size), total);
-    }
-
-    public RestPage(Page<T> page) {
-        super(page.getContent(), page.getPageable(), page.getTotalElements());
-        LOG.info("page.content: {}", page.getContent());
     }
 
 
